Fixed z-index for menu.

--- a/client/templates/news/main.css
+++ b/client/templates/news/main.css
@@ -10,6 +10,7 @@ nav {
   top: 0;
   width: 80%;
   background-color: var(--colorFgSecondary);
+  z-index: 1;
 }
 
 nav:not(:target) {
